--- a/style.css
+++ b/style.css
@@ -426,14 +426,23 @@ footer {
 }
 
 
+
 .header-box {
-  right: -5%; 
-  margin-top: 40%; 
+  position: relative;
+  width: calc(100vw - 10%); /* Full viewport width minus some indentation */
+  max-width: 1600px; /* Maximum width for larger screens */
+  padding-right: 5%; /* Padding to prevent content from touching the right edge */
+  padding-left: 5%; /* Padding to ensure indentation on the left */
+  box-sizing: border-box; /* Include padding in width calculation */
+  top: -8vh; /* Adjust position as needed */
+  margin-left: 3%; /* Adjust this value for more or less indentation from the left */
 }
 
-.header-margin{
-  margin-top: 30%;
+
+.header-margin {
+  margin-top: 30%; /* Margin on top for spacing */
 }
+
 
 .timeline-margin {
   margin-right: -20%;
@@ -538,6 +547,10 @@ footer {
     top: 54%;
     right: 15%;
   }
+
+  .header-box {
+    top: -12vh; /* Adjust position as needed */
+  }
   
 }
 
@@ -545,6 +558,10 @@ footer {
 @media (min-width:550px) {
 .header-image-height {
   height: 40rem;
+}
+
+.header-box {
+  top: -15vh;
 }
 }
 
@@ -612,6 +629,8 @@ footer {
 
 }
 
+
+
 @media (min-width:800px) {
 
   .header-margin{
@@ -629,7 +648,18 @@ footer {
 
 
 
-@media (min-width:840px) {
+
+
+
+@media (min-width:850px) {
+
+  .header-margin{
+    margin-top: 16%;
+  }
+
+}
+
+@media (min-width:878px) {
   .mobile-menu {
     display: none;
 }
@@ -641,16 +671,7 @@ footer {
   }
 }
 
-
-@media (min-width:850px) {
-
-  .header-margin{
-    margin-top: 16%;
-  }
-
-}
-
-@media (min-width:900px) {
+@media (min-width:945px) {
 .nav-item {
   font-size: 19.6px;
 }
@@ -719,17 +740,9 @@ footer {
   
 }
 
-@media (min-width:1280px) {
-.header-box {
-  margin-top: 35%;
-}
-}
 
-@media (min-width:1536px) {
-  .header-box {
-    margin-top: 30%;
-  }
-  }
+
+
 
 
 @media (min-width:1600px) {
