--- a/style.css
+++ b/style.css
@@ -506,7 +506,6 @@ footer {
 
   .mobile-menu {
     width: 350px; 
-    height: 851px;
   }
   
 }
@@ -713,6 +712,16 @@ footer {
   }
 
 }
+
+
+@media (min-width:1280px) {
+  
+  .header-box {
+    top: 42vh;
+  }
+  }
+
+
 
 @media (min-width:1300px) {
   .header-margin{
